iter_language/tests/corpus/invalid/unknown-event.iter
queue memory
on no_such_event {
  shell "echo hi"
}
runner { continue_on_error = false  behavior = wait }
